sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:20: error: unclosed character literal
          print'a '
                  ^AlgCocktailSort1:20: error: ';' expected but symbol literal found.
          print'a '
               ^